# python-basic

./: README.md
Jupter/: 50_Python_Practice_Tasks.ipynb  Numpy.ipynb  Python_Beginners_Collection.ipynb  Python_Examples.ipynb  Python_Syntax_Theory_Expanded.ipynb  Torch.ipynb
basic/: binary_search.ipynb  find_element.ipynb  recursions.ipynb
scraping/uninews-crawler/: pyproject.toml
scraping/uninews-crawler/src/uninews_crawler/: cli.py  crawler.py
sorting/: bubble_sort.ipynb  insertion_sort.ipynb  merge_sort.ipynb  selection_sort.ipynb  sort_squares_of_number.ipynb
